# bcul

./: CHEAT_SHEET.md  CHEAT_SHEET.txt  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  README.txt
include/bcul/: bcul.h  console.h  main.h  window_management.h
src/: main.cpp
src/bcul/: bcul.cpp  shared.cpp  window_management.cpp
